<resources>
    <string name="app_name">ChitChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_conversations">Conversations</string>
    <string name="text_groups">Groups</string>
    <string name="text_search">Search</string>
    <string name="text_add">add</string>
    <string name="text_change_name">change name</string>
    <string name="text_delete_account">delete account</string>
    <string name="text_hint_name">Name</string>
    <string name="text_cancel">cancel</string>
    <string name="text_rename">Rename</string>
    <string name="text_rename_title">Change your username</string>
    <string name="text_delete_user_description">Do you really want to delete your account? You won\'t be able to undo this operation.</string>
    <string name="text_delete_user_title">Delete account</string>
    <string name="text_user_deleted">User deleted:</string>
    <string name="text_user_left">User left the group:</string>
    <string name="text_you">You:</string>
    <string name="text_colon">%1$d:</string>
    <string name="text_read">Read</string>
    <string name="text_delete">Delete</string>
    <string name="text_current_group_members">Current group members:</string>
    <string name="text_add_to_group">Add users to your group</string>
    <string name="text_name_of_your_group">Name of your group</string>
    <string name="text_create">create</string>
    <string name="text_leave_group">Leave group</string>
    <string name="text_remove">Remove</string>
    <string name="text_rename_group_title">Rename this group</string>
    <string name="text_remove_user_from_group_title">Are you sure you want to remove this user from the group?</string>
    <string name="text_remove_user_from_group">Remove this user</string>
    <string name="text_leave_group_title">Are you sure you want to leave the group?</string>
    <string name="text_no_users_found">Couldn\'t find users with this username!</string>
    <string name="facebook_app_id">398647391638815</string>
    <string name="fb_login_protocol_scheme">fb398647391638815</string>
    <string name="text_logout">Log Out</string>
    <string name="text_no_conversations_found">You currently have no conversations!\nStart one!</string>
    <string name="text_no_groups_found">You are not in any group!\nCreate one!</string>
</resources>